// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should accept a selected outcome 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                  <circle
                    cx="6"
                    cy="6"
                    fill="#20e0b4"
                    id="fill"
                    r="6"
                    transform="translate(3 3)"
                  />
                </svg>
                <input
                  checked=""
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should hide radio selections 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="1"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show no as winning token 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bwzfXH isTgkr"
                >
                  <img
                    alt="Winning Outcome"
                    class="sc-htpNat dMAkQL"
                    src="badge.svg"
                  />
                </div>
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs kNACnj"
                      color="#1565C0"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bwzfXH isTgkr"
                />
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show probabilities 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      0.75%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs cqJBiZ"
                      color="#acacac"
                      width="0.75"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      0.25%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs fklaqh"
                      color="#acacac"
                      width="0.25"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should show yes as winning token 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bwzfXH isTgkr"
                >
                  <img
                    alt="Winning Outcome"
                    class="sc-htpNat dMAkQL"
                    src="badge.svg"
                  />
                </div>
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs kNACnj"
                      color="#1565C0"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY bvCUaX"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bwzfXH isTgkr"
                />
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX sc-kAzzGY CGYbl"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should work with disabled columns 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;

exports[`should work with minimal props 1`] = `
<DocumentFragment>
  <div
    class="sc-cSHVUG cUnUqJ"
  >
    <div
      class="sc-iwsKbI iYbeZE"
    >
      <table
        class="sc-gZMcBi iEBVrQ"
      >
        <thead
          class="sc-gqjmRU hnZXkc"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <th
              class="sc-jTzLTM iEIHDF"
              colspan="2"
            >
              Outcome probabilities
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Current Price
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Shares
            </th>
            <th
              class="sc-jTzLTM chZvYq"
              colspan="1"
            >
              Payout
            </th>
          </tr>
        </thead>
        <tbody
          class="sc-jzJRlG enxKql"
        >
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_Yes"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="0"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      Yes
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
          <tr
            class="sc-VigVT jehSmX"
          >
            <td
              class="sc-fjdhpX sc-chPdSV bRCJQq"
            >
              <div
                class="sc-dnqmqq klMOwB"
                data-testid="outcome_table_radio_No"
              >
                <svg
                  height="18"
                  viewBox="0 0 18 18"
                  width="18"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="#fff"
                    id="radio_off"
                    stroke="#ccc"
                  >
                    <circle
                      cx="9"
                      cy="9"
                      r="9"
                      stroke="none"
                    />
                    <circle
                      cx="9"
                      cy="9"
                      fill="none"
                      r="8.5"
                    />
                  </g>
                </svg>
                <input
                  name="outcome"
                  type="radio"
                  value="1"
                />
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              <div
                class="sc-bdVaJa cCEGee"
              >
                <div
                  class="sc-bxivhb khxFsg"
                >
                  <div
                    class="sc-ifAKCX iBCBrN"
                  >
                    <h2
                      class="sc-EHOje dzdiCk"
                    >
                      No
                    </h2>
                    <p
                      class="sc-bZQynM jEPqPz"
                    >
                      50.00%
                    </p>
                  </div>
                  <div
                    class="sc-gzVnrw dcgayZ"
                  >
                    <div
                      class="sc-htoDjs dYIKGE"
                      color="#acacac"
                      width="50"
                    />
                  </div>
                </div>
              </div>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.5000 
              <strong>
                DAI
              </strong>
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
            <td
              class="sc-fjdhpX igGLZk"
            >
              0.00
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</DocumentFragment>
`;
